--- a/FarmProject.Presentation/FarmProject.Presentation.csproj
+++ b/FarmProject.Presentation/FarmProject.Presentation.csproj
@@ -1,9 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FarmProject.Application\FarmProject.Application.csproj" />
+    <ProjectReference Include="..\FarmProject.Infrastructure\FarmProject.Infrastructure.csproj" />
+  </ItemGroup>
 
 </Project>
