--- a/FarmProject.Presentation/FarmProject.Presentation.csproj
+++ b/FarmProject.Presentation/FarmProject.Presentation.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+    <PackageReference Include="xUnit" Version="2.9.3" />
   </ItemGroup>
 
   <ItemGroup>
