fix: make changes to the files so that the code compiles based on prev implementation of methods related to the recording of impregnation status

--- a/.gitignore
+++ b/.gitignore
@@ -663,3 +663,6 @@ sketch
 .ionide
 Task1VersionControl/Imgs/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,dotnetcore,csharp,visualstudiocode,jetbrains+all,react,node
+
+**/appsettings.Development.json
+**/appsettings.json
