feat: implement an EventConsumer with a Consume method

--- a/FarmProject.Domain.UnitTests/FarmProject.Domain.UnitTests.csproj
+++ b/FarmProject.Domain.UnitTests/FarmProject.Domain.UnitTests.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FarmProject.Application\FarmProject.Application.csproj" />
     <ProjectReference Include="..\FarmProject.Domain\FarmProject.Domain.csproj" />
   </ItemGroup>
 
