ci: run tests in ci pipeline

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Build with .NET
       run: dotnet build --configuration Release --no-restore FarmProject.sln
 
+    - name: Build with .NET
+      run: dotnet test --configuration Release --no-restore --no-build FarmProject.sln
+
     - name: Test with .NET
       run: dotnet test
 
