--- a/FarmProject.API/FarmProject.API.csproj
+++ b/FarmProject.API/FarmProject.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
       <PrivateAssets>all</PrivateAssets>
@@ -24,6 +25,11 @@
     <ProjectReference Include="..\FarmProject.Domain\FarmProject.Domain.csproj" />
     <ProjectReference Include="..\FarmProject.Infrastructure.Migrations\FarmProject.Infrastructure.Migrations.csproj" />
     <ProjectReference Include="..\FarmProject.Infrastructure\FarmProject.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dtos\FarmTasks\" />
+    <Folder Include="Dtos\Pairs\" />
   </ItemGroup>
 
 </Project>
