--- a/FarmProject.React/package.json
+++ b/FarmProject.React/package.json
@@ -15,6 +15,8 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
+    "@mui/x-date-pickers": "^8.5.3",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
