feat: add base of the sacrification functionality

--- a/FarmProject.API/appsettings.json
+++ b/FarmProject.API/appsettings.json
@@ -23,5 +23,9 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
 
+  "FarmSettings": {
+    "OffspringSacrificableAgeInDays":  60
+  },
+
   "AllowedHosts": "*"
 }
