feat: add OrderRequest entity

--- a/FarmProject.Infrastructure.Migrations/FarmProject.Infrastructure.Migrations.csproj
+++ b/FarmProject.Infrastructure.Migrations/FarmProject.Infrastructure.Migrations.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\FarmProject.Infrastructure\FarmProject.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\Domain\" />
+  </ItemGroup>
+
 </Project>
